--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "core-js": "^3.6.4",
     "element-ui": "^2.13.0",
     "js-cookie": "^2.2.1",
+    "lib-flexible": "^0.3.2",
     "normalize.css": "^8.0.1",
+    "postcss-pxtorem": "^5.1.1",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
@@ -36,6 +38,8 @@
     "eslint-plugin-vue": "^6.1.2",
     "mockjs": "^1.0.1-beta3",
     "node-sass": "^4.13.1",
+    "px2rem-loader": "^0.1.9",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
